--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_fonts: ^6.1.0
   cached_network_image: ^3.3.0
   get_storage: ^2.1.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
