--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cached_network_image: ^3.3.0
   get_storage: ^2.1.1
   provider: ^6.1.1
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
