--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get_storage: ^2.1.1
   provider: ^6.1.1
   http: ^1.1.2
+  easy_debounce: ^2.0.3
 
 dev_dependencies:
   flutter_test:
