--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   provider: ^6.1.1
   http: ^1.1.2
   easy_debounce: ^2.0.3
+  sqflite: ^2.3.0
+  android_alarm_manager_plus: ^3.0.4
+  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +26,8 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   change_app_package_name: ^1.1.0
   flutter_launcher_icons: "^0.13.1"
+  mockito: ^5.4.4
+  build_runner: ^2.4.7
 
 flutter_launcher_icons:
   android: "launcher_icon"
